[package]
name = "oneshot-handshake"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A crate providing a symmetric one time use channel type."
repository = "https://github.com/Vi-Kitten/Handshake"
readme = "README.md"
keywords = ["linear", "channels"]
categories = ["asynchronous"]
rust-version = "1.77.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
